syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.orderms.inventory.grpc";
option java_outer_classname = "InventoryServiceProto";

package inventoryservice;

service InventoryService {
  rpc CheckInventory(CheckInventoryRequest) returns (CheckInventoryResponse);
  rpc ReserveInventory(ReserveInventoryRequest) returns (ReserveInventoryResponse);
  rpc ReleaseInventory(ReleaseInventoryRequest) returns (ReleaseInventoryResponse);
  rpc UpdateInventory(UpdateInventoryRequest) returns (UpdateInventoryResponse);
  rpc GetInventory(GetInventoryRequest) returns (GetInventoryResponse);
}

message CheckInventoryRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message CheckInventoryResponse {
  bool available = 1;
  int32 current_quantity = 2;
}

message ReserveInventoryRequest {
  string product_id = 1;
  int32 quantity = 2;
  string order_id = 3;
}

message ReserveInventoryResponse {
  bool success = 1;
  string reservation_id = 2;
}

message ReleaseInventoryRequest {
  string reservation_id = 1;
}

message ReleaseInventoryResponse {
  bool success = 1;
}

message UpdateInventoryRequest {
  string product_id = 1;
  int32 quantity = 2;
  string operation = 3; // "add" or "set"
}

message UpdateInventoryResponse {
  bool success = 1;
  int32 new_quantity = 2;
}

message GetInventoryRequest {
  string product_id = 1;
}

message GetInventoryResponse {
  string product_id = 1;
  int32 available_quantity = 2;
  int32 reserved_quantity = 3;
  int64 updated_at = 4;
}
